# pyspedas_plugin

./: .gitignore  MANIFEST.in  README.md  erg_xep_get_dist.py  load.py  pyproject.toml  setup.py  xep移植用.ipynb
att/: att.py
common/cotrans/: dsi2j2000.py  erg_cotrans.py  erg_interpolate_att.py  sga2sgi.py  sgi2dsi.py  vector_rotate.py
doc/: hep_loadpro_req.md  lepe_loadpro_req.md  lepi_loadpro_req.md  mepe_loadpro_req.md  mepi_nml_loadpro_req.md  mepi_tof_loadpro_req.md  mgf_loadpro_req.md  orb_l3_loadpro_req.md  orb_loadpro_req.md  orb_pre_loadpro_req.md  pwe_efd_loadpro_req.md  pwe_hfa_loadpro_req.md  pwe_ofa_loadpro_req.md  pwe_wfc_loadpro_req.md  xep_loadpro_req.md
ergpyspedas/: LICENSE  README.md  __init__.py
ergpyspedas/erg/: __init__.py
ergpyspedas/erg/ground/camera/: camera_omti_asi.py  keogram_image.py  omti_attitude_params.py  plot_omti_gmap.py  plot_omti_image.py  rm_star_absint.py  tabsint.py  tabsint_nobg.py  tasi2gmap.py  tmake_image_dev.py  tmake_map_table.py
ergpyspedas/erg/ground/geomag/: gmag_isee_fluxgate.py  gmag_isee_induction.py  gmag_magdas_1sec.py  gmag_mm210.py  gmag_nipr.py  gmag_stel_fluxgate.py
ergpyspedas/erg/ground/gmag_isee_fluxgate/: gmag_isee_fluxgate.py
ergpyspedas/erg/satellite/: load.py
ergpyspedas/util/: __init__.py  common.py  subtract_average.py  test.py  tplot_vl.py
hep/: hep.py
lepe/: lepe.py
lepi/: lepi.py
mepe/: mepe.py
mepi/: mepi.py  mepi_nml.py  mepi_tof.py
mgf/: example.ipynb  mgf.py
orb/: orb.py
pwe/: example.ipynb  pwe.py  pwe_efd.py  pwe_hfa.py  pwe_ofa.py  pwe_wfc.py
xep/: xep.py
(+163 files in other folders)
